# ai-agent-vision

./: .gitignore  .pre-commit-config.yaml  AmazonQ.md  README.md  docker-compose.release.yml  docker-compose.yml  main.py  package-lock.json  package.json  requirements.txt  webapp.py
backend/: .env.example  Dockerfile  README.md  chat.py  cli.py  fullchat.py  langgraph.json  main.py  mealplanner.py  mealplannertest.py  pricecomparison.py  processreceipt.py  pyproject.toml  requirements-dev.txt  requirements.txt  runshoppinglistflow.py  server.py  setup.cfg  test_scrapers.py  webapp.py
backend/agents/: __init__.py  chat.py  graph.py  itemclassifier.py  itemclassifierprompt.py  langgraphapp.py  maingraph.py  orchestrator.py  persistdata.py  pricecomparison.py  receiptanalyzer.py  receiptanalyzerprompt.py  receiptstate.py
backend/agents/chat/: __init__.py  chat.py  mealplanning.py  shoppinglist.py
backend/agents/common/: __init__.py  classifiernode.py  customtoolnode.py  logging_utils.py  notdefinednode.py  summarizationnode.py  toolnode.py
backend/agents/mealplanner/: __init__.py  mealplanner.py
backend/agents/models/: __init__.py  models.py
backend/agents/recipes/: recipe.py  (+4 more)
backend/common/: __init__.py  analytics.py  datastore.py  job_store.py  logging.py  mongo_connection.py  mongo_store.py  postgres_store.py  receipt_repository.py  recipe_repository.py  repository_factory.py  sqlite_store.py
backend/examples/: README.md  agent-with-tools.py
backend/frontend/: jsconfig.json  package-lock.json  package.json  svelte.config.js  tsconfig.json
backend/graphserver/: package-lock.json  server.py  testclient.js
backend/webapp/: __init__.py  app.py  receipt_repository.py
(+199 files in other folders)
