[tool.black]
line-length = 127
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 127
multi_line_output = 3

[dependency-groups]
dev = [
    "pre-commit >=3.3.2",
    "black ==25.1.0",
    "isort >=5.12.0",
    "flake8 >=6.0.0",
    "flake8-docstrings >=1.7.0",
    "pytest >=7.3.1",
    "pytest-cov >=4.1.0",
    "build>=1.2.2.post1"
]

[tool.setuptools]
packages = ["agents", "common" ]

[tools.setuptools.data_files]
"." = [".env.example", "README.md"]

[project.scripts]
ai-agent-vision-server = "server:main"

[project]
name = "ai-agent-vision"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "copilotkit (==0.1.44)",
    "langchain-huggingface (>=0.2.0,<0.3.0)",
    "langchain-openai (>=0.3.17,<0.4.0)",
    "langchain-community (>=0.3.24,<0.4.0)",
    "langchain-core (>=0.3.60,<0.4.0)",
    "langgraph (>=0.4.5,<0.5.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "fastapi (>=0.100.0)",
    "python-multipart (>=0.0.6)",
    "uvicorn (>=0.23.0)",
    "pydantic (>=2.0.0)",
    "typing-extensions (>=4.7.1)",
    "starlette (>=0.27.0)",
    "uvicorn (>=0.13.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pymongo (>=4.5.0)",
    "motor (>=3.3.1)",
    "requests (>=2.28.0)",
    "beautifulsoup4 (>=4.11.0)",
    "lxml (>=4.9.0)",
    "cachetools (>=5.2.0)",
    "recipe-scrapers>=15.7.1",
]
